--- a/ubuntu-openstacks/openstack-nonest.yaml
+++ b/ubuntu-openstacks/openstack-nonest.yaml
@@ -41,7 +41,7 @@ applications:
     num_units: 1
     options: 
       "block-device": None
-      "glance-api-version": 2
+      "glance-api-version": 3
     annotations: 
       "gui-x": "750"
       "gui-y": "0"
@@ -65,6 +65,7 @@ applications:
     num_units: 1
     options: 
       "admin-password": fortinet
+      preferred-api-version: 3
     annotations: 
       "gui-x": "500"
       "gui-y": "0"
