--- a/cloudify/fos-lifecycle/blueprint.yaml
+++ b/cloudify/fos-lifecycle/blueprint.yaml
@@ -7,10 +7,10 @@ description: >
 imports:
   - http://www.getcloudify.org/spec/cloudify/4.5.5/types.yaml
   - http://www.getcloudify.org/spec/openstack-plugin/2.14.7/plugin.yaml
- #   - plugin:cloudify-openstack-plugin
+  - plugin:cloudify-openstack-plugin
   - plugin:cloudify-utilities-plugin
   - plugins/cloudify-fortimanager-plugin/plugin.yaml
-#  - plugin:cloudify-diamond-plugin
+  - plugin:cloudify-diamond-plugin
 
 
 
